--- a/LOGIN/estilo.css
+++ b/LOGIN/estilo.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #e9e9e9;
+  background-color: #1a8a94;
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
   line-height: 1.25;
